# DeepLearning-YOLO-Study

./: .gitignore  main.py  pyproject.toml
src/: 0_yolo.ipynb  1_detection_exercise.ipynb  1_yolo_exercise.ipynb  2_youtube_yolo.py  3_detection_cat_dog.ipynb  4_yolo_chiikwa.ipynb  5_segment_exercise.ipynb  6_segment_fastsam.ipynb
