[project]
name = "deeplearning-yolo-study"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "jupyter>=1.1.1",
    "numpy==1.26.4",
    "pillow>=11.3.0",
    "python-dotenv>=1.1.1",
    "roboflow>=1.2.7",
    "ultralytics>=8.3.191",
]
